# odherogrid

./: .gitignore  CHANGELOG.md  LICENSE  PYPIREADME.md  Pipfile  README.md  TODO  categorize.py  cfg.py  config.py  enums.py  generate_pypi_readme.py  generate_readme.py  main.py  odapi.py  odhg.py  parse.py  parseargs.py  postprocess.py  pyproject.toml  resources.py  tests.py
odherogrid/: __init__.py  categorize.py  cfg.py  cli.py  config.py  enums.py  error.py  help.py  herogrid.py  odapi.py  odhg.py  parseargs.py  resources.py  settings.py
odherogrid/cli/: __init__.py  help.py  params.py  parse.py  utils.py
odherogrid/schedule/: wintask.py
odherogrid/scripts/: cli.py  generate_readme.py  help.py
scripts/: build.sh  build_odhg.ps1  generate_pypi_readme.py  generate_readme.py  resources.py
tests/: conftest.py  test_cli.py  test_config.py  test_dist.py  test_enums.py  test_error.py  test_herogrid.py  test_odapi.py  test_odherogrid.py  test_resources.py
